# nixdockertag

./: README.md  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  pyproject.toml  shell.nix
.github/workflows/: update-images.yml
cmd/: update.go
images/: dessalines-lemmy-ui.nix  dessalines-lemmy.nix  farcaller-mucklet-chatbot.nix  farcaller-powerdns-docker.nix  farcaller-tiddlywiki-docker.nix  farcaller-wordpress-docker.nix  freshrss-freshrss.nix  homebridge-homebridge.nix  oznu-homebridge.nix  postgres-16-alpine.nix  tailscale-golink.nix  tailscale-tailscale.nix
updater/: __init__.py  main.go
updater/cmd/: image-hash.go  root.go  show.go  update-all.go
updater/dxf/test/responses/: test_docker_image_platform_get_alias.yaml
updater/pkg/nix/: parser.go  writer.go
